GL/src/test/deca/context/invalid/deca_sans_objet/doubldec.deca
// Description :
// test de déclaration des variables
//
// Resultats :
// Ligne 12 : double declaration
//
// Historique:
//    cree le 01/01/2026

{
  int x;
  int x;
}